# vafi

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  pyrightconfig.json  spike-test.txt
ansible/: ansible.cfg
config/: bridge-roles.yaml  harnesses.yaml  infra.yaml  roles.yaml
docs/: ARCHITECTURE-SUMMARY.md  DOC-MAINTENANCE-PROPOSAL.md  INDEX.md  STATUS-AUDIT.md  STATUS.md  agent-bridge-service-DESIGN.md  agent-context-passing-DESIGN.md  architect-agent-DESIGN.md  architect-agent-IMPLEMENTATION.md  controller-DESIGN.md  cxdb-vtf-integration-DESIGN.md  dev-server-setup-ANALYSIS.md  developer-images-CLOSEOUT.md  developer-images-DESIGN.md  developer-images-RUMSFELD.md  developer-images-S1-REPORT.md  developer-images-SELF-TEST-PROTOCOL.md  executor-judge-observability-FINDINGS.md  f7-f10-delivery-gate-DESIGN.md  generic-agents-spike-ANALYSIS.md  harness-images-ARCHITECTURE.md  helm-migration-PLAN.md  issue-15-https-ssh-remote-DESIGN.md  issue-17-clone-ssh-DESIGN.md  k8s-harness-spikes-ANALYSIS.md  m2-simulation-ANALYSIS.md  mempalace-integration-DESIGN.md  mempalace-integration-IMPLEMENTATION-PLAN.md  r3b-verdict-write-fail-loud-DESIGN.md  vafi-DESIGN.md  vafi-developer-container.md  vafi-project-PLAN.md  vfdev-setup-guide.md  viloforge-cloudflare-repo-SPECIFICATION.md  vtf-vafi-fixes-PLAN.md  vtf-vafi-interface-CONTRACT.md  wc2-controller-integration-DESIGN.md
k8s/: namespaces.yaml
methodologies/: architect.md  executor.md  judge.md
scripts/: build-developer-images.sh  build-images.sh  claude-mempalace  create-secrets.sh  deploy.sh  launcher-test-developer.sh  mempalace-shared-test.sh  new-hook-bundle.sh  palace-backup  prompt-test-developer.sh  push-images.sh  setup-developer-env.sh  setup-ssh-palace  smoke-test.sh  (+5 more)
vtf-sdk-python/: pyproject.toml
vtf-sdk-python/tests/: test_async_client.py  test_entities.py  test_exceptions.py  test_factories.py  test_managers_admin.py  test_managers_read.py  test_managers_workplan.py  test_managers_write.py  test_mock_client.py  test_refs.py  test_transport.py
vtf-sdk-python/tests/integration/: conftest.py  test_lifecycle.py
vtf-sdk-python/vtf_sdk/: __init__.py  async_client.py  async_transport.py  base.py  client.py  entities.py  exceptions.py  managers.py  pagination.py  refs.py  transport.py
vtf-sdk-python/vtf_sdk/testing/: __init__.py  factories.py  mock_client.py
(+253 files in other folders)
