[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vafi-controller"
version = "0.1.0"
description = "Autonomous AI agent fleet controller"
requires-python = ">=3.11"
dependencies = [
    "vtf-sdk-python @ git+https://github.com/vilosource/vtaskforge.git@f5a29c61bec336bb4ae843d05f5594048372b7e5#subdirectory=vtf-sdk-python",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
mcp = [
    "mcp[cli]>=1.20",
]
# vfobs observability emission (WG5-min T1). OPTIONAL by design
# (D-T1-impl-2): vafi installs + runs without it; emission.py
# imports it via try/except → no-op. Install this extra AND set
# VFOBS_EMIT_ENABLED=true to actually emit.
observability = [
    "vfobs-sdk-python @ git+https://github.com/ViloForge/vfobs.git@05a7117b2758120b8a3bf42abc6fdabafb4647dc#subdirectory=sdk/python",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end tests against deployed services (requires network + kubectl access)",
]
